# LocalLifeOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODEX_IMPLEMENTATION_PROMPTS.md  LICENSE  Makefile  README.md  brand.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260715_0001_create_system_settings.py  20260715_0002_create_domain_foundation.py  20260715_0003_productivity_backend.py  20260715_0004_finance_engine.py  20260715_0005_finance_safeguards.py  20260715_0006_commitment_engine.py  20260715_0007_scheduling_engine.py  20260715_0008_scenario_planning.py  20260715_0009_domain_entity_width.py  20260716_0010_imports_automation.py  20260716_0011_offline_privacy.py
apps/api/app/: __init__.py  launcher.py  main.py
apps/api/tests/: conftest.py  test_api_foundation.py  test_automation_api.py  test_calendar_api.py  test_commitment_scenarios.py  test_commitments_api.py  test_concurrency.py  test_data_integrity.py  test_demo_data.py  test_finance_api.py  test_finance_planning_reports.py  test_health.py  test_imports_api.py  test_judge_workflow.py  test_launcher.py  test_migrations.py  test_model_validation.py  test_money.py  test_notes_attachments_api.py  test_privacy_backups.py  test_productivity_api.py  test_recurrence.py  test_repositories.py  test_scenarios.py  test_scenarios_api.py  test_scheduling_api.py  test_scheduling_benchmark.py  test_system.py
(+275 files in other folders)
